<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright © 2020 Tinkoff Bank
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/acq_stub_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/acq_ic_generic_error_stub"
        app:layout_constraintBottom_toTopOf="@+id/acq_stub_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/acq_stub_title"
        style="@style/AcquiringStubTitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/acq_generic_stubnet_title"
        app:layout_constraintBottom_toTopOf="@+id/acq_stub_subtitle"
        app:layout_constraintTop_toBottomOf="@+id/acq_stub_img" />

    <TextView
        android:id="@+id/acq_stub_subtitle"
        style="@style/AcquiringCommonDescriptionStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        tools:text="@string/acq_generic_stubnet_description"
        app:layout_constraintBottom_toTopOf="@+id/acq_stub_retry_button"
        app:layout_constraintTop_toBottomOf="@+id/acq_stub_title" />

    <TextView
        android:id="@+id/acq_stub_retry_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/acq_button_retry_bg"
        android:gravity="center"
        android:paddingHorizontal="18dp"
        android:paddingVertical="14dp"
        android:text="@string/acq_generic_button_stubnet"
        android:textAllCaps="false"
        android:textColor="@color/acq_colorAccent"
        android:textSize="@dimen/acq_small_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/acq_stub_subtitle" />


</androidx.constraintlayout.widget.ConstraintLayout>